syntax = "proto3";

package io.eventter.mq;

import "client/eventtermq.proto";
import "gogoproto/gogo.proto";

option go_package = "mq";

message DebugRequest {
}

message DebugResponse {
    // Cluster state dumped to string.
    string cluster_state = 1;
    // Open segments info dumped to string.
    repeated string segments = 2;
}

message OpenSegmentRequest {
    // If true and node is not a leader, request will fail.
    bool leader_only = 99;
    uint64 node_id = 1 [(gogoproto.customname) = "NodeID"];
    NamespaceName topic = 2 [(gogoproto.nullable) = false];
}

message OpenSegmentResponse {
    uint64 segment_id = 1 [(gogoproto.customname) = "SegmentID"];
    uint64 primary_node_id = 2 [(gogoproto.customname) = "PrimaryNodeID"];
}

message RotateSegmentRequest {
    // If true and node is not a leader, request will fail.
    bool leader_only = 99;
    uint64 node_id = 1 [(gogoproto.customname) = "NodeID"];
    uint64 old_segment_id = 2 [(gogoproto.customname) = "OldSegmentID"];
    uint64 old_size = 3;
    bytes old_sha1 = 4;
}

service NodeRPC {
    rpc Debug (DebugRequest) returns (DebugResponse);
    rpc OpenSegment (OpenSegmentRequest) returns (OpenSegmentResponse);
    rpc RotateSegment (RotateSegmentRequest) returns (OpenSegmentResponse);
}
